--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <a href="recipes/Homemade.html">Homemade</a>
-    <a href="recipes/Homemade_Coutons.html">Homemade_Coutons"</a>
-    <a href="recipes/Homemade_Brownies.html">Homemade_Brownies"</a>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ol>
+	    <a href="recipes/Homemade.html">Homemade</a>
+            <a href="recipes/Homemade_Coutons.html">Homemade_Coutons</a>
+            <a href="recipes/Homemade_Brownies.html">Homemade_Brownies</a>
+    </ol>
 </body>
 </html>
