--- a/odin-recipes/recipes/Homemade_Coutons.html
+++ b/odin-recipes/recipes/Homemade_Coutons.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Homemade_Croutons </h1>
     <img src="https://cookieandkate.com/images/2021/05/homemade-croutons.jpg">
-    <h>Description</h>
+    <h2>Description</h2>
     <p> The best part about homemade croutons is that you can use your favorite bread, even if it’s gone stale, and your croutons are ready in under 15 minutes.</p>
-    <h>Ingredients</h>
+    <h2>Ingredients</h2>
     <ul>You’ll need bread, of course, as well as olive oil (or melted butter), salt, pepper and garlic powder. The oil or butter helps the bread develop crisp, golden edges, and the seasonings bring out the croutons’ best.</ul>
-    <h>Steps</h>
+    <h2>Steps</h2>
     <ol>Tear fresh bread or slice stale bread: Since fresh bread can be so delicate, I found that it’s easier to gently tear fresh bread by hand. Likewise, it’s easier to use a serrated knife to gently see-saw across stale bread.
 
         Aim for 3/4-inch cubes of bread: This size is just right, yielding croutons that are perfectly bite-sized. They’re nicely crisp on the outside, yet still have a bit of chew on the inside. They’re crisp enough to stand up to dressing, but not so crisp that you’ll break a tooth on them! Don’t worry if you’re croutons aren’t perfect cubes. Irregular, craggy bits are welcome here.
