--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ol>
-	<a href="recipes/Homemade.html">Homemade</a>
-        <a href="recipes/Homemade_Coutons.html">Homemade_Coutons</a>
-        <a href="recipes/Homemade_Brownies.html">Homemade_Brownies</a>
-    </ol>
+    <img src="https://i.ytimg.com/vi/9_5wHw6l11o/maxresdefault.jpg"width="700px" height="400px">
+    <h3>Let's start with your favourite!</h3>
+    <ul>
+        <li><a href="recipes/Homemade_Pizza.html">Homemade Pizza</a></li>
+        <li><a href="recipes/Homemade_Coutons.html">Homemade Coutons</a></li>
+        <li><a href="recipes/Homemade_Brownies.html">Homemade Brownies</a></li>
+    </ul>
 </body>
 </html>
+
